[tool.poetry]
name = "is-mart-open_martDB-generator"
version = "0.1.0"
description = ""
authors = ["greenstar1151 <39073901+greenstar1151@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
