[tool.poetry]
name = "is-mart-open_martDB-generator"
version = "0.1.0"
description = ""
authors = ["greenstar1151 <39073901+greenstar1151@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
bs4 = "^0.0.1"
python-dateutil = "^2.8.2"
pytz = "^2021.3"
lunardate = "^0.2.0"
psycopg = {extras = ["binary"], version = "^3.0.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
